[gd_scene load_steps=16 format=3 uid="uid://cacsucd8jd8dp"]

[ext_resource type="Script" path="res://Script/Test.gd" id="1_8u0dc"]
[ext_resource type="Texture2D" uid="uid://2fukvfwiefym" path="res://Background.png" id="2_161pk"]
[ext_resource type="TileSet" uid="uid://cxpeh6qeijh0k" path="res://Scenes/level_base.tres" id="3_7tw7j"]
[ext_resource type="PackedScene" uid="uid://cucdy1gdq50pi" path="res://Objects/Valve/valve.tscn" id="3_ns0oy"]
[ext_resource type="PackedScene" uid="uid://dl3tuhpcscov6" path="res://Objects/Drain/drain.tscn" id="4_utrq6"]
[ext_resource type="PackedScene" uid="uid://wccd13ev1iqd" path="res://MainUi/main_ui.tscn" id="5_ylrsj"]
[ext_resource type="PackedScene" uid="uid://ccs0km0eobpbo" path="res://KeyUnlock/key_unlock.tscn" id="6_cqdit"]
[ext_resource type="PackedScene" uid="uid://cripdd4urrva7" path="res://Door/door.tscn" id="7_na3sk"]
[ext_resource type="PackedScene" uid="uid://g3iwnh7xsxh6" path="res://Water/water_body.tscn" id="8_c2rab"]
[ext_resource type="PackedScene" uid="uid://bba6cadhfoa0r" path="res://Objects/Dropper/dropper.tscn" id="9_qujx0"]
[ext_resource type="PackedScene" uid="uid://muow6ng6hqhh" path="res://Player/Player.tscn" id="10_6v8l3"]
[ext_resource type="PackedScene" uid="uid://sb7kdo0sps0q" path="res://MainUi/pauseMenu.tscn" id="12_1w006"]
[ext_resource type="PackedScene" uid="uid://bail6jwirr76m" path="res://MainUi/next_level.tscn" id="12_gl8ys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v54or"]
size = Vector2(489, 290)

[sub_resource type="Curve" id="Curve_bfoa0"]
_data = [Vector2(0.028, 0.174674), 0.0, 0.0, 0, 0, Vector2(0.436, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Level_Base" type="Node2D"]
script = ExtResource("1_8u0dc")
max_capacity = 1500

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(240, 136)
texture = ExtResource("2_161pk")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("3_7tw7j")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Outer Detail"
layer_0/tile_data = PackedInt32Array(65536, 524288, 10, 131072, 524288, 10, 196608, 524288, 10, 262144, 524288, 10, 327680, 524288, 10, 393216, 524288, 10, 851982, 327680, 9, 851981, 327680, 9, 851980, 327680, 9, 851979, 327680, 9, 851978, 327680, 9, 851977, 327680, 9, 851976, 327680, 9, 851975, 327680, 9, 851974, 327680, 9, 851973, 327680, 9, 851972, 327680, 9, 851971, 327680, 9, 851970, 327680, 9, 851969, 327680, 9, 851968, 0, 11, 786432, 524288, 10, 720896, 524288, 10, 655360, 524288, 10, 589824, 524288, 10, 524288, 524288, 10, 458752, 524288, 10, 720919, 524288, 10, 786455, 524288, 10, 851991, 131072, 11, 851990, 327680, 9, 851989, 327680, 9, 851988, 327680, 9, 851987, 327680, 9, 851986, 327680, 9, 851985, 327680, 9, 851984, 327680, 9, 851983, 327680, 9, 0, 0, 9, 1, 327680, 9, 2, 327680, 9, 5, 327680, 9, 6, 327680, 9, 7, 327680, 9, 8, 327680, 9, 9, 327680, 9, 10, 327680, 9, 11, 327680, 9, 12, 327680, 9, 13, 327680, 9, 14, 327680, 9, 15, 327680, 9, 16, 327680, 9, 4, 327680, 9, 3, 327680, 9, 17, 327680, 9, 18, 327680, 9, 19, 327680, 9, 20, 327680, 9, 21, 327680, 9, 22, 327680, 9, 23, 131072, 9, 65559, 524288, 10, 131095, 524288, 10, 196631, 524288, 10, 262167, 524288, 10, 327703, 524288, 10, 393239, 524288, 10, 458775, 524288, 10, 524311, 524288, 10, 589847, 524288, 10, 655383, 524288, 10)
layer_1/name = "Inner Walls"
layer_1/tile_data = PackedInt32Array()

[node name="time" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Valve" parent="." node_paths=PackedStringArray("Main") instance=ExtResource("3_ns0oy")]
position = Vector2(451, 242)
rotation = -3.14159
Main = NodePath("..")

[node name="Drain" parent="." node_paths=PackedStringArray("Main") instance=ExtResource("4_utrq6")]
position = Vector2(240, 256)
Main = NodePath("..")

[node name="draincapacity" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KeyUnlock" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_cqdit")]
position = Vector2(440, 64)
player = NodePath("../CharacterBody2D")

[node name="Door" parent="." node_paths=PackedStringArray("scene", "player") instance=ExtResource("7_na3sk")]
position = Vector2(372, 245)
scene = NodePath("..")
player = NodePath("../CharacterBody2D")

[node name="Water_body" parent="." instance=ExtResource("8_c2rab")]
z_index = 1
position = Vector2(0, 264)
spread = 12
spring_number = 16

[node name="water" type="Area2D" parent="Water_body"]
position = Vector2(0, 5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water_body/water"]
position = Vector2(246, 142)
shape = SubResource("RectangleShape2D_v54or")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Water_body"]
position = Vector2(256, 136)
amount = 50
lifetime = 3.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(300, 100)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angular_velocity_min = 25.0
angular_velocity_max = 25.0
damping_min = 3.0
damping_max = 10.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_bfoa0")
color = Color(0, 0.658824, 1, 1)

[node name="Dropper" parent="." node_paths=PackedStringArray("main_scene") instance=ExtResource("9_qujx0")]
position = Vector2(100, 24)
main_scene = NodePath("..")

[node name="Dropper2" parent="." node_paths=PackedStringArray("main_scene") instance=ExtResource("9_qujx0")]
position = Vector2(380, 24)
main_scene = NodePath("..")

[node name="CharacterBody2D" parent="." groups=["Player"] instance=ExtResource("10_6v8l3")]
position = Vector2(312, 248)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainUi" parent="CanvasLayer" node_paths=PackedStringArray("main_scene") instance=ExtResource("5_ylrsj")]
z_index = 5
mouse_filter = 2
main_scene = NodePath("../..")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("12_1w006")]

[node name="Control" parent="CanvasLayer" instance=ExtResource("12_gl8ys")]
mouse_filter = 2

[connection signal="timeout" from="time" to="." method="_on_time_timeout"]
[connection signal="timeout" from="draincapacity" to="." method="_on_draincapacity_timeout"]

[editable path="CanvasLayer/PauseMenu"]
[editable path="CanvasLayer/Control"]
